# Proyecto_ciberseguridad

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
analyzer/: __init__.py  aggregator.py  analysis_state.py  cicd_parser.py  codeql_parser.py  counters.py  generate_analysis.py  grype_parser.py  loaders.py  metrics.py  notebook_runner.py  paths.py  sbom_parser.py  validators.py  writer.py
miner/: __init__.py  __main__.py  clone.py  db.py  github_client.py  models.py  pipeline.py
miner/analyzers/: cicd.py  codeql.py  grype.py  security-extended-javascript.qls  security-extended-python.qls  syft.py
nbs/: 01_overview.ipynb  02_vulnerability_patterns.ipynb  03_repository_risk_and_conclusions.ipynb
scripts/: prepare_visualizer_data.sh
tests/: test_aggregator_integration.py  test_counters.py  test_metrics.py  test_parsers.py  test_validators.py
visualizer/: README.md  angular.json  package-lock.json  package.json
visualizer/src/: styles.css
visualizer/src/app/: app.config.ts  app.css  app.html  app.spec.ts  app.ts
visualizer/src/app/components/artifact-type-heatmap/: artifact-type-heatmap.component.css  artifact-type-heatmap.component.html  artifact-type-heatmap.component.ts
visualizer/src/app/components/cicd-findings-table/: cicd-findings-table.component.css  cicd-findings-table.component.html  cicd-findings-table.component.ts
visualizer/src/app/components/codeql-level-summary/: codeql-level-summary.component.css  codeql-level-summary.component.html  codeql-level-summary.component.ts
visualizer/src/app/components/cwe-ranking/: cwe-ranking.component.css  cwe-ranking.component.html  cwe-ranking.component.ts
visualizer/src/app/components/executive-insights/: executive-insights.component.css  executive-insights.component.html  executive-insights.component.ts
visualizer/src/app/components/key-findings/: key-findings.component.css  key-findings.component.html  key-findings.component.ts
visualizer/src/app/components/kpi-cards/: kpi-cards.component.css  (+2 more)
visualizer/src/app/models/: analysis.model.ts
visualizer/src/app/services/: analysis-data.service.spec.ts  analysis-data.service.ts
visualizer/src/assets/: analysis.json
(+23 files in other folders)
