[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "secpipeline"
version = "0.1.0"
description = "Security Vulnerability Analysis Pipeline — Miner, Analyzer, Visualizer"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    # Core
    "httpx>=0.27",
    "tenacity>=8.3",
    "python-dotenv>=1.0",
    # Data analysis
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    # Jupyter
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.0.0",
    "ipykernel>=6.0.0",
    # Visualization
    "plotly>=5.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "mypy>=1.10",
    "ruff>=0.4",
    "black>=24.0",
]

[project.scripts]
secpipeline-miner = "miner.__main__:run"

[tool.hatch.build.targets.wheel]
packages = ["miner", "analyzer"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py311"]
