[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "secpipeline"
version = "0.1.0"
description = "Security Vulnerability Analysis Pipeline — Miner, Analyzer, Visualizer"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "requests>=2.31",
    "python-dotenv>=1.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.0.0",
    "ipykernel>=6.0.0",
    "plotly>=5.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
secpipeline-miner = "miner.__main__:run"

[tool.hatch.build.targets.wheel]
packages = ["miner", "analyzer"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
